--- a/home.html
+++ b/home.html
@@ -128,57 +128,57 @@
     </div>
     <div class="swiper popularSwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+        <div class="swiper-slide">
+          <a href="#" class="w-full group h-[220px] sm:h-[280px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img1.png" alt=""
                  class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 group-hover:bg-black/80 transition flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena ">Ультралайт</span>
+              <span class="absolute text-white text-[32px] max-[767px]:text-[24px] z-10 font-lena ">Ультралайт</span>
             </div>
           </a>
         </div>
-        <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+        <div class="swiper-slide">
+          <a href="#" class="w-full group h-[220px] sm:h-[280px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img2.png" alt=""
                  class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 group-hover:bg-black/80 transition flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">На джиг</span>
+              <span class="absolute text-white text-[32px] max-[767px]:text-[24px] z-10 font-lena">На джиг</span>
             </div>
           </a>
         </div>
-        <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+        <div class="swiper-slide">
+          <a href="#" class="w-full group h-[220px] sm:h-[280px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img3.png" alt=""
                  class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 group-hover:bg-black/80 transition flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">Троллинг</span>
+              <span class="absolute text-white text-[32px] max-[767px]:text-[24px] z-10 font-lena">Троллинг</span>
             </div>
           </a>
         </div>
-        <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+        <div class="swiper-slide">
+          <a href="#" class="w-full group h-[220px] sm:h-[280px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img4.png" alt=""
                  class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 group-hover:bg-black/80 transition flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">На поплавок</span>
+              <span class="absolute text-white text-[32px] max-[767px]:text-[24px] z-10 font-lena">На поплавок</span>
             </div>
           </a>
         </div>
-        <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+        <div class="swiper-slide">
+          <a href="#" class="w-full group h-[220px] sm:h-[280px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img5.png" alt=""
                  class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 group-hover:bg-black/80 transition flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">Фидер</span>
+              <span class="absolute text-white text-[32px] max-[767px]:text-[24px] z-10 font-lena">Фидер</span>
             </div>
           </a>
         </div>
-        <div class="swiper-slide max-w[1600px]">
-          <a href="#" class="w-full group h-[378px] max-[767px]:h-[290px] rounded-[8px] overflow-hidden relative">
+        <div class="swiper-slide">
+          <a href="#" class="w-full group h-[220px] sm:h-[280px] rounded-[8px] overflow-hidden relative">
             <img src="img/popular-img1.png" alt=""
                  class="w-full transition transform group-hover:scale-[1.05] h-full object-cover">
             <div class="absolute top-0 left-0 w-full h-full bg-black/50 group-hover:bg-black/80 transition flex-jc-c rounded-[8px]">
-              <span class="absolute text-white text-[40px] max-[767px]:text-[24px] z-10 font-lena">Фидер</span>
+              <span class="absolute text-white text-[32px] max-[767px]:text-[24px] z-10 font-lena">Фидер</span>
             </div>
           </a>
         </div>
@@ -256,7 +256,7 @@
       <div class="max-w-[752px] p-[50px] max-[1024px]:p-[0px]">
         <h2 class="text-white max-w-[590px] text-[64px] max-[767px]:text-[32px] font-lena
         max-[767px]:mb-[10px] leading-[100%] tracking-[-1.28px] font-normal">Надувные лодки со скидкой 25%!</h2>
-        <span class="text-[20px] leading-[100%] text-white max-[767px]:text-[18px]">Летний сезон в самом разгаре, это значит стартует наша
+        <span class="text-[20px] leading-[100%] text-white max-[767px]:text-[16px]">Летний сезон в самом разгаре, это значит стартует наша
           акция. Купи товаров на 25 000 рублей и получи скидку
            10% на следующую покупку</span>
       </div>
@@ -282,7 +282,7 @@
 
     <div class="swiper swiperHeroProduct">
       <div class="swiper-wrapper">
-        <div data-for="5" class="swiper-slide py-12">
+        <div data-for="5" class="swiper-slide sm:py-12">
           <component src="./components/product-card.html"></component>
         </div>
       </div>
@@ -308,7 +308,7 @@
                наша акция. Купи товаров на 25 000 рублей и получи
                скидку 10% на следующую покупку</span>
           </div>
-          <img src="img/info-img1.png" alt="" class="absolute z-[-1] max-[767px]:w-[60vw] right-[0] bottom-[0]">
+          <img src="img/info-img1.png" alt="" class="absolute z-[-1] max-[767px]:w-[60vw] w-[200px] right-[0] top-[0]">
         </div>
         <div style="background-image: url(img/info-slider-bg.png)"
              class="swiper-slide max-[767px]:min-h-[490px] max-[767px]:items-start max-[767px]:py-[32px] bg-no-repeat bg-cover bg-center w-full rounded-[16px] overflow-hidden h-[330px] relative flex-jc-c">
@@ -330,7 +330,7 @@
                наша акция. Купи товаров на 25 000 рублей и получи
                скидку 10% на следующую покупку</span>
           </div>
-          <img src="img/info-img1.png" alt="" class="absolute z-[-1] max-[767px]:w-[60vw] right-[0] bottom-[0]">
+           <img src="img/info-img1.png" alt="" class="absolute z-[-1] max-[767px]:w-[60vw] w-[200px] right-[0] top-[0]">
         </div>
       </div>
       <div class="swiper-pagination"></div>
@@ -355,7 +355,7 @@
 
     <div class="swiper swiperHeroProduct">
       <div class="swiper-wrapper">
-        <div data-for="5" class="swiper-slide py-12">
+        <div data-for="5" class="swiper-slide sm:py-12">
           <component src="./components/product-card.html"></component>
         </div>
       </div>
@@ -369,11 +369,11 @@
   max-[1024px]:flex max-[1024px]:flex-col relative z-[0]">
     <h2 class="font-lena max-w-[700px] mb-[20px] font-normal text-[#336B46] max-[1024px]:text-[32px] text-[64px] leading-[100%]">
       Сапоги для рыбаков со скидкой 25%!</h2>
-    <p class="max-w-[650px] text-[20px] text-[#323232] leading-[110%] max-[1024px]:text-[16px] max-[1024px]:mb-[10px]">
+    <p class="max-w-[550px] text-[20px] text-[#323232] leading-[110%] max-[1024px]:text-[16px] max-[1024px]:mb-[10px]">
       Летний сезон в самом разгаре, это значит стартует наша акция.
       Купи товаров на 25 000 рублей и получи скидку 10% на следующую покупку
     </p>
-    <img src="img/valinki.png" alt="" class="absolute z-[-1] top-0 right-[140px]
+    <img src="img/valinki.png" alt="" class="absolute z-[-1] top-0 right-[10px]
     max-[1500px]:w-[40vw] max-[1500px]:right-[0px] max-[1024px]:hidden">
   </div>
 
@@ -381,7 +381,7 @@
 
     <div class="w-full flex-jsb-c mb-6">
       <div class="flex-js-c gap-4">
-        <h3 class="text-[32px]">Скидки от 20% и больше</h3>
+        <h3 class="text-[28px] sm:text-[32px]">Скидки от 20% и больше</h3>
       </div>
       <div class="popular-navigation flex-je-c relative gap-2">
         <div class="swiper-button-prev product after:text-[20px] after:text-black after:content-['prev']
@@ -393,7 +393,7 @@
 
     <div class="swiper swiperHeroProduct">
       <div class="swiper-wrapper">
-        <div data-for="5" class="swiper-slide py-12">
+        <div data-for="5" class="swiper-slide sm:py-12">
           <component src="./components/product-card.html"></component>
         </div>
       </div>
@@ -549,7 +549,7 @@
   <img src="img/dzukik.svg" alt="" class="absolute bottom-[0] left-[0] z-[-1]">
   <div class="container">
     <div class="flex-jsb-s flex-col min-[1500px]:flex-row">
-      <h2 class="max-w-[520px] leading-[100%] font-lena text-white text-[64px]
+      <h2 class="max-w-[520px] leading-[100%] font-lena text-white text-[45px]
        font-normal max-[1500px]:mb-[30px] max-[1500px]:max-w-[100%] max-[767px]:text-[32px]">Наши преимущества</h2>
       <div class="grid grid-cols-3 max-[1024px]:grid-cols-2
       max-[767px]:grid-cols-1 gap-x-[30px] gap-y-[60px] max-w-[1000px] w-full max-[767px]:gap-[20px]">
