--- a/catalog.html
+++ b/catalog.html
@@ -666,7 +666,7 @@
         <div class="mt-6">
           <div
               class="w-full grid grid-cols-1 sm:grid-cols-1 min-[800px]:grid-cols-1 min-[880px]:grid-cols-1 
-              min-[960px]:grid-cols-2 min-[1280px]:grid-cols-4 min-[1200px]:grid-cols-3 gap-6">
+              min-[960px]:grid-cols-2 min-[1200px]:grid-cols-3 gap-6">
             <component data-for="12" src="./components/product-card.html"></component>
           </div>
         </div>
@@ -682,7 +682,7 @@
             Летний сезон в самом разгаре, это значит стартует наша акция.
             Купи товаров на 25 000 рублей и получи скидку 10% на следующую покупку
           </p>
-          <img src="img/valinki.png" alt="" class="absolute top-0 right-[32px] max-[1280px]:w-[16vw] max-[1280px]:right-[8px] max-[1120px]:hidden">
+          <img src="img/valinki.png" alt="" class="absolute top-0 right-[32px] max-[1280px]:w-[14vw] w-[300px] max-[1280px]:right-[8px] max-[1120px]:hidden">
         </div>
 
 
