--- a/home.html
+++ b/home.html
@@ -23,20 +23,19 @@
 
 <div class="container w-full">
 
-  <div class="w-full  h-[386px] sm:h-[570px] rounded-[24px] mt-5 relative">
+  <div class="w-full  h-[386px] sm:h-[378px] rounded-[24px] mt-5 relative">
 
     <div class="swiper swiperHero  rounded-[24px] overflow-hidden">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <div class="w-full h-[386px] sm:h-[570px] relative rounded-[24px] overflow-hidden">
+          <div class="w-full h-[386px] sm:h-[378px] relative rounded-[24px] overflow-hidden">
             <img src="img/header-slider-item.png" alt="header-slider-item"
                  class="absolute top-0 left-0 w-full h-full object-cover">
-            <div class="absolute w-full h-full top-0 left-0 flex-js-s md:flex-js-c pt-10 px-5 md:px-[95px] bg-black/50">
+            <div class="absolute w-full h-full top-0 left-0 flex-js-s md:flex-js-c pt-3 px-5 md:px-[60px] bg-black/50">
               <div>
-                <h1 class="font-lena text-[32px] md:text-[60px] xl:text-[85px] text-white w-full max-w-[677px] leading-[32px] md:leading-[60px] xl:leading-[75px] tracking-[-1.7px]">
-                  Акция
-                  к летнему сезону!</h1>
-                <p class="text-white mt-4 tracking-[-0.16px] w-full max-w-[490px]">Летний сезон в самом разгаре, это
+                <h1 class="font-lena text-[32px] md:text-[64px] text-white w-full max-w-[677px] leading-[32px] md:leading-[65px] tracking-[-2px]">
+                  Акция к летнему сезону!</h1>
+                <p class="text-white mt-3 tracking-[-0.16px] w-full max-w-[490px]">Летний сезон в самом разгаре, это
                   значит стартует наша акция. Купи товаров на 25 000 рублей и получи скидку 10% на следующую покупку</p>
                 <button
                     class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition mt-9 h-[54px] px-6 rounded-[8px] text-white font-bold">
@@ -47,15 +46,14 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="w-full h-[386px] sm:h-[570px] relative rounded-[24px] overflow-hidden">
+          <div class="w-full h-[386px] sm:h-[378px] relative rounded-[24px] overflow-hidden">
             <img src="img/header-slider-item.png" alt="header-slider-item"
                  class="absolute top-0 left-0 w-full h-full object-cover">
-            <div class="absolute w-full h-full top-0 left-0 flex-js-s md:flex-js-c pt-10 px-5 md:px-[95px] bg-black/50">
+            <div class="absolute w-full h-full top-0 left-0 flex-js-s md:flex-js-c pt-3 px-5 md:px-[60px] bg-black/50">
               <div>
-                <h1 class="font-lena text-[32px] md:text-[60px] xl:text-[85px] text-white w-full max-w-[677px] leading-[32px] md:leading-[60px] xl:leading-[75px] tracking-[-1.7px]">
-                  Акция
-                  к летнему сезону!</h1>
-                <p class="text-white mt-4 tracking-[-0.16px] w-full max-w-[490px]">Летний сезон в самом разгаре, это
+                <h1 class="font-lena text-[32px] md:text-[64px] text-white w-full max-w-[677px] leading-[32px] md:leading-[65px] tracking-[-2px]">
+                  Акция к летнему сезону!</h1>
+                <p class="text-white mt-3 tracking-[-0.16px] w-full max-w-[490px]">Летний сезон в самом разгаре, это
                   значит стартует наша акция. Купи товаров на 25 000 рублей и получи скидку 10% на следующую покупку</p>
                 <button
                     class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition mt-9 h-[54px] px-6 rounded-[8px] text-white font-bold">
@@ -65,15 +63,16 @@
             </div>
           </div>
         </div>
+        
       </div>
 
       <div class="swiper-pagination"></div>
 
     </div>
     <div
-        class="swiper-button-prev hero w-[60px] h-[60px] text-[20px] bg-white/50 backdrop-blur-[7.5px] rounded-[8px] after:text-[20px] after:text-black after:content-['prev'] min-[1740px]:ml-[-35px] transition hover:bg-white/80"></div>
+        class="swiper-button-prev hero w-[40px] h-[40px] min-[1250px]:w-[60px] min-[1250px]:h-[60px] text-[20px] bg-[#E8E8E880] backdrop-blur-[7.5px] rounded-[8px] after:text-[20px] after:text-black after:content-['prev'] min-[1250px]:ml-[-25px] transition hover:bg-white/80"></div>
     <div
-        class="swiper-button-next hero w-[60px] h-[60px] text-[20px] bg-white/50 backdrop-blur-[7.5px] rounded-[8px] after:text-[20px] after:text-black after:content-['next'] min-[1740px]:mr-[-35px] transition hover:bg-white/80"></div>
+        class="swiper-button-next hero w-[40px] h-[40px] min-[1250px]:w-[60px] min-[1250px]:h-[60px] text-[20px] bg-[#E8E8E880] backdrop-blur-[7.5px] rounded-[8px] after:text-[20px] after:text-black after:content-['next'] min-[1250px]:mr-[-25px] transition hover:bg-white/80"></div>
 
 
   </div>
@@ -95,7 +94,7 @@
               class="w-[38px] sm:w-[45px] h-[38px] sm:h-[45px] rounded-[4px] bg-[#F4F4F4] text-[18px] sm:text-[28px] text-[#747474] flex-jc-c">21</span>
         </div>
       </div>
-      <div class="popular-navigation flex-je-c relative gap-2">
+      <div class="popular-navigation flex-je-c relative gap-2 mt-5">
         <div class="swiper-button-prev product after:text-[20px] after:text-black after:content-['prev']
         w-[42px] h-[42px] rounded-[8px] transition border border-[#6E6E6E]/25 static hover:border-black"></div>
         <div class="swiper-button-next product transition after:text-[20px] after:text-black after:content-['next']
@@ -248,7 +247,7 @@
     </div>
   </div>
 
-  <div class="w-full h-[570px] max-[1024px]:h-auto mb-[70px] relative rounded-[24px] overflow-hidden">
+  <div class="w-full h-[380px] max-[1024px]:h-auto mb-[70px] relative rounded-[24px] overflow-hidden">
     <img src="img/lodka-bg.png" alt="header-slider-item" class="absolute w-full h-full object-cover
      top-0 left-0">
     <div class="relative z-0 w-full h-full top-0 left-0 flex-jsb-c px-[95px
@@ -272,7 +271,7 @@
       <div class="flex-js-c gap-4">
         <h3 class="text-[32px]">Новинки</h3>
       </div>
-      <div class="popular-navigation flex-je-c relative gap-2">
+      <div class="popular-navigation flex-je-c relative gap-2 mt-5">
         <div class="swiper-button-prev product after:text-[20px] after:text-black after:content-['prev']
         w-[42px] h-[42px] rounded-[8px] transition border border-[#6E6E6E]/25 static hover:border-black"></div>
         <div class="swiper-button-next product transition after:text-[20px] after:text-black after:content-['next']
@@ -344,7 +343,7 @@
       <div class="flex-js-c gap-4">
         <h3 class="text-[32px]">Популярные товары</h3>
       </div>
-      <div class="popular-navigation flex-je-c relative gap-2">
+      <div class="popular-navigation flex-je-c relative gap-2 mt-5">
         <div class="swiper-button-prev product after:text-[20px] after:text-black after:content-['prev']
         w-[42px] h-[42px] rounded-[8px] transition border border-[#6E6E6E]/25 static hover:border-black"></div>
         <div class="swiper-button-next product transition after:text-[20px] after:text-black after:content-['next']
@@ -383,7 +382,7 @@
       <div class="flex-js-c gap-4">
         <h3 class="text-[28px] sm:text-[32px]">Скидки от 20% и больше</h3>
       </div>
-      <div class="popular-navigation flex-je-c relative gap-2">
+      <div class="popular-navigation flex-je-c relative gap-2 mt-5">
         <div class="swiper-button-prev product after:text-[20px] after:text-black after:content-['prev']
         w-[42px] h-[42px] rounded-[8px] transition border border-[#6E6E6E]/25 static hover:border-black"></div>
         <div class="swiper-button-next product transition after:text-[20px] after:text-black after:content-['next']
@@ -422,42 +421,42 @@
     <div class="swiper swiperPartners">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
+          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[16px] flex-jc-c transition hover:border-black">
             <img src="img/partners/brand-1.png" alt="brand-1" class="max-w-[100%] max-h-[100%]">
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
+          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[16px] flex-jc-c transition hover:border-black">
             <img src="img/partners/partner-2.png" alt="brand-1" class="max-w-[100%] max-h-[100%]">
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
+          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[16px] flex-jc-c transition hover:border-black">
             <img src="img/partners/partner-3.png" alt="brand-1" class="max-w-[100%] max-h-[100%]">
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
+          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[16px] flex-jc-c transition hover:border-black">
             <img src="img/partners/partnet-4.png" alt="brand-1" class="max-w-[100%] max-h-[100%]">
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
+          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[16px] flex-jc-c transition hover:border-black">
             <img src="img/partners/partner-5.png" alt="brand-1" class="max-w-[100%] max-h-[100%]">
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
+          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[16px] flex-jc-c transition hover:border-black">
             <img src="img/partners/partner-6.png" alt="brand-1" class="max-w-[100%] max-h-[100%]">
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
+          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[16px] flex-jc-c transition hover:border-black">
             <img src="img/partners/partner-7.png" alt="brand-1" class="max-w-[100%] max-h-[100%]">
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
+          <div class="w-full h-[103px] sm:h-[150px] px-4 border rounded-[16px] flex-jc-c transition hover:border-black">
             <img src="img/partners/partner-7.png" alt="brand-1" class="max-w-[100%] max-h-[100%]">
           </div>
         </div>
@@ -494,7 +493,7 @@
     <div class="swiper swiperNews">
       <div class="swiper-wrapper">
         <div class="swiper-slide max-[767px]:w-[310px]">
-          <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
+          <div class="w-full h-[290px] relative rounded-[12px] overflow-hidden group">
             <img src="img/news.png" alt="new"
                  class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
             <div
@@ -504,7 +503,7 @@
           </div>
         </div>
         <div class="swiper-slide max-[767px]:w-[310px]">
-          <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
+          <div class="w-full h-[290px] relative rounded-[12px] overflow-hidden group">
             <img src="img/news-2.jpg" alt="new"
                  class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
             <div
@@ -514,7 +513,7 @@
           </div>
         </div>
         <div class="swiper-slide max-[767px]:w-[310px]">
-          <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
+          <div class="w-full h-[290px] relative rounded-[12px] overflow-hidden group">
             <img src="img/news-3.jpg" alt="new"
                  class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
             <div
@@ -524,7 +523,7 @@
           </div>
         </div>
         <div class="swiper-slide max-[767px]:w-[310px]">
-          <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
+          <div class="w-full h-[290px] relative rounded-[12px] overflow-hidden group">
             <img src="img/news-4.jpg" alt="new"
                  class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
             <div
