--- a/catalog.html
+++ b/catalog.html
@@ -151,12 +151,12 @@
 
         <div class="lg:block mt-2">
           <div class="w-full flex-jsb-c gap-2">
-            <div class="fle-js-c gap-2 text-[#6E6E6E] w-[38.4%]">
+            <div class="fle-js-c gap-2 text-[#6E6E6E] w-[50%]">
               от
               <input type="text" class="w-[80%] h-[39.2px] border border-[#C7C7C7] pl-3 rounded-[6.4px] text-[#212121]"
                      value="70" id="priceMin">
             </div>
-            <div class="fle-js-c gap-2 text-[#6E6E6E] w-[38.4%]">
+            <div class="fle-js-c gap-2 text-[#6E6E6E] w-[50%]">
               до
               <input type="text" class="w-[80%] h-[39.2px] border border-[#C7C7C7] pl-3 rounded-[6.4px] text-[#212121]"
                      value="140" id="priceMax">
@@ -167,7 +167,7 @@
           </div>
         </div>
 
-        <h3 class="font-semibold mt-6 mb-1">Тип удилища</h3>
+        <h3 class="font-semibold mt-6 mb-5">Тип удилища</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -187,7 +187,7 @@
           </label>
         </div>
 
-        <h3 class="font-semibold mt-5 mb-1">Ценовой сегмент</h3>
+        <h3 class="font-semibold mt-5 mb-5">Ценовой сегмент</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -207,7 +207,7 @@
           </label>
         </div>
 
-        <h3 class="font-semibold mt-5 mb-1">Вид ловли</h3>
+        <h3 class="font-semibold mt-5 mb-5">Вид ловли</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -239,7 +239,7 @@
 
         <a href="#" class="block text-blue underline mt-4">Посмотреть все</a>
 
-        <h3 class="font-semibold mt-5 mb-1">Вид катушки</h3>
+        <h3 class="font-semibold mt-5 mb-5">Вид катушки</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -264,7 +264,7 @@
           </label>
         </div>
 
-        <h3 class="font-semibold mt-5 mb-1">Бренд</h3>
+        <h3 class="font-semibold mt-5 mb-5">Бренд</h3>
 
         <div>
           <label class="def-checkbox brand flex-js-c mb-2">
@@ -307,7 +307,7 @@
         <a href="#" class="block text-blue underline mt-4">Посмотреть все</a>
 
 
-        <h3 class="font-semibold mt-5 mb-1">Для вида рыбы</h3>
+        <h3 class="font-semibold mt-5 mb-5">Для вида рыбы</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -340,7 +340,7 @@
         <a href="#" class="block text-blue underline mt-4">Посмотреть все</a>
 
 
-        <h3 class="font-semibold mt-5 mb-1">Фрикцион</h3>
+        <h3 class="font-semibold mt-5 mb-5">Фрикцион</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -357,7 +357,7 @@
 
         <a href="#" class="block text-blue underline mt-4">Посмотреть все</a>
 
-        <h3 class="font-semibold mt-5 mb-1">Особенности снасти</h3>
+        <h3 class="font-semibold mt-5 mb-5">Особенности снасти</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -390,7 +390,7 @@
         <a href="#" class="block text-blue underline mt-4">Посмотреть все</a>
 
 
-        <h3 class="font-semibold mt-5 mb-1">Модель</h3>
+        <h3 class="font-semibold mt-5 mb-5">Модель</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -423,7 +423,7 @@
         <a href="#" class="block text-blue underline mt-4">Посмотреть все</a>
 
 
-        <h3 class="font-semibold mt-5 mb-1">Страна производитель</h3>
+        <h3 class="font-semibold mt-5 mb-5">Страна производитель</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -441,7 +441,7 @@
         <a href="#" class="block text-blue underline mt-4">Посмотреть все</a>
 
 
-        <h3 class="font-semibold mt-5 mb-1">Размер шпули</h3>
+        <h3 class="font-semibold mt-5 mb-5">Размер шпули</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -497,7 +497,7 @@
         <a href="#" class="block text-blue underline mt-4">Посмотреть все</a>
 
 
-        <h3 class="font-semibold mt-5 mb-1">Тип рыболовной шпули</h3>
+        <h3 class="font-semibold mt-5 mb-5">Тип рыболовной шпули</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -515,7 +515,7 @@
         <a href="#" class="block text-blue underline mt-4">Посмотреть все</a>
 
 
-        <h3 class="font-semibold mt-5 mb-1">Цвет</h3>
+        <h3 class="font-semibold mt-5 mb-5">Цвет</h3>
 
         <div>
           <label class="def-checkbox flex-js-c mb-2">
@@ -675,14 +675,13 @@
           <button class="px-6 h-[43.2px] border border-blue rounded-[6.4px]">Показать еще</button>
         </div>
 
-        <div class="mt-[48px] min-h-[336px] py-[40px] pl-[40px] max-[1120px]:p-[19.2px] rounded-[12.8px] bg-[#F4F4F4] relative max-[1120px]:min-h-[inherit] ">
-          <h2 class="font-lena max-w-[560px] mb-[16px] font-normal text-[#336B46] text-[51.2px] max-[1120px]:text-[25.6px] max-[1120px]:mb-[24px] leading-[80%]">Сапоги для
+        <div class="mt-[48px] min-h-[336px] py-[40px] pl-[40px] max-[1120px]:p-[19.2px] rounded-[12.8px] bg-[#F4F4F4] relative max-[1120px]:min-h-[inherit] pt-[70px]">
+          <h2 class="font-lena max-w-[650px] mb-[16px] font-normal text-[#336B46] text-[64px] max-[1120px]:text-[40px] max-[1120px]:mb-[24px] leading-[80%]">Сапоги для
             рыбаков со скидкой 25%!</h2>
-          <p class="max-w-[520px] text-[16px] text-[#323232] leading-[88%]">
-            Летний сезон в самом разгаре, это значит стартует наша акция.
-            Купи товаров на 25 000 рублей и получи скидку 10% на следующую покупку
+          <p class="max-w-[520px] text-[20px] text-[#323232] leading-[24px] ">
+            Летний сезон в самом разгаре, это значит стартует наша акция. Купи товаров на 25 000 рублей и получи скидку 10% на следующую покупку
           </p>
-          <img src="img/valinki.png" alt="" class="absolute top-0 right-[32px] max-[1280px]:w-[14vw] w-[300px] max-[1280px]:right-[8px] max-[1120px]:hidden">
+          <img src="img/valinki.png" alt="" class="absolute top-0 right-[32px] max-[1280px]:w-[14vw] w-[400px] max-[1280px]:right-[8px] max-[1120px]:hidden">
         </div>
 
 
