--- a/home.html
+++ b/home.html
@@ -468,7 +468,7 @@
 
   </div>
 
-  <div class="w-full h-auto mt-10 md:mt-[70px] mb-10 md:mb-[100px]">
+  <div class="w-full h-auto mt-10 md:mt-[70px] mb-10">
 
     <div class="w-full flex-jsb-c mb-6">
       <div class="flex-js-c gap-4">
@@ -532,6 +532,16 @@
             </div>
           </div>
         </div>
+        <div class="swiper-slide max-[767px]:w-[310px]">
+          <div class="w-full h-[290px] relative rounded-[12px] overflow-hidden group">
+            <img src="img/news-2.jpg" alt="new"
+                 class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
+            <div
+                class="absolute top-0 left-0 p-4 bg-black/30 text-white flex-js-e text-[18px] w-full h-full leading-[auto]">
+              Летняя рыбалка: все что надо знать, но вы могли пропустить
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
@@ -539,6 +549,10 @@
     <div class="swiperNews-pagination flex-jc-c mt-4"></div>
 
 
+  </div>
+
+  <div  class="flex-js-c mb-10 md:mb-[100px]">
+    <a href="#" class="px-6 h-[52px] bg-white text-[16px] rounded-[8px] border-[2px] border-blue flex-jc-c hover:bg-blue hover:text-white transition">Все новости</a>
   </div>
 
 </div>
